package br.ufg.inf.barbearia.model;

public enum StatusAgendamento {
    AGENDADO,
    CONFIRMADO,
    CONCLUIDO,
    CANCELADO
}
